// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button with some emoji 1`] = `
<button
  className="css-1qwzad5"
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Another Button with text 1`] = `
<button
  className="css-1qwzad5"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1qwzad5"
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-1qwzad5"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<Styled(article)>
  <Styled(h1)>
    Welcome to storybook
  </Styled(h1)>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <Styled(code)>
      src/stories
    </Styled(code)>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <Styled(button)
      onClick={[Function]}
    >
      stories
    </Styled(button)>
     for a component called
     
    <Styled(code)>
      Button
    </Styled(code)>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <Styled(code)>
      Button
    </Styled(code)>
     stories located at
     
    <Styled(code)>
      src/stories/index.js
    </Styled(code)>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <Styled(a)
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </Styled(a)>
     
    section in our documentation.
  </p>
  <Styled(p)>
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <Styled(code)>
      .storybook/webpack.config.js
    </Styled(code)>
     to add webpack loaders and plugins you are using in this project.
  </Styled(p)>
</Styled(article)>
`;
